src/main/java/com/example/finalproject/_core/error/exception/SSRException404.java
package com.example.finalproject._core.error.exception;

public class SSRException404 extends RuntimeException{

    public SSRException404(String msg) {
        super(msg);
    }
}
